<resources>
    <string name="app_name">AboWatch</string>
    <string name="dashboard_title">My Overview</string>
    <string name="total_monthly">Total monthly cost</string>
    <string name="add_sub_button">Add a new subscription</string>
    <string name="label_name">Subscription Name</string>
    <string name="label_price">Price</string>
    <string name="label_category">Select a category</string>
    <string name="label_start_date">Start date</string>
    <string name="label_notice_period">Notice period (in days)</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="cat_streaming" translatable="false">Streaming</string>
    <string name="cat_gym" translatable="false">Fitness</string>
    <string name="delete_confirm_title">Delete subscription?</string>
    <string name="delete_confirm_msg">Are you sure you want to permanently delete this subscription?</string>
    <string name="button_edit">Edit</string>
    <string name="button_done">Done</string>
    <string name="button_delete">Delete</string>
    <string name="error_field_required">This field cannot be left blank</string>
    <string name="toast_subscription_saved">Subscription saved</string>
    <string name="toast_subscription_deleted">Subscription deleted</string>
    <string name="title_add_subscription">New Subscription</string>
    <string name="subtitle_add_subscription">Add a new subscription</string>
    <string name="title_edit_subscription">Edit subscription</string>
    <string name="subtitle_edit_subscription">Edit your subscription details</string>
    <string name="error_price_invalid">Please enter a valid price</string>
    <string name="label_price_euros" translatable="false">Euro</string>
    <string name="label_price_cents" translatable="false">Cent</string>
    <string-array name="subscription_categories">
        <item>Streaming</item>
        <item>Music</item>
        <item>Gaming</item>
        <item>Fitness</item>
        <item>Software</item>
        <item>Cloud</item>
        <item>News</item>
        <item>Shopping</item>
        <item>Finance</item>
        <item>Other</item>
    </string-array>
    <string name="fab_add_description">Add new subscription</string>
    <string name="label_billing_cycle">Billing Cycle</string>
    <string-array name="billing_cycles">
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>
    <string name="notification_channel_name">AboWatch Reminders</string>
    <string name="notification_channel_desc">Reminders for expiring cancellation deadlines</string>
    <string name="notification_title">Cancellation deadline expiring!</string>
    <string name="notification_content">Cancel by %s</string>
    <string name="notification_big_text">Your subscription \\\"%1$s\\\" renews soon. Cancel by %2$s at the latest.</string>
    <string name="label_is_cancelled">Subscription cancelled</string>
    <string name="badge_cancelled">Cancelled</string>
</resources>